--- a/diff0/styles.css
+++ b/diff0/styles.css
@@ -96,6 +96,11 @@
     background-color: rgba(255, 128, 79, 0.26);
 }
 
+.ace_diff.selection {
+    border-color: black;
+    background: transparent;
+}
+
 /*
  * Dark Colors 
  */
@@ -125,6 +130,11 @@
 }
 .ace_dark .ace_diff.delete.inline:after {
     background-color: rgba(169, 46, 33, 0.55);
+}
+
+.ace_dark .ace_diff.selection {
+    border-color: white;
+    background: transparent;
 }
 
 /*
